<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.midiavox</groupId>
  <artifactId>gestaoramaisdesktop</artifactId>
  <version>1.0-SNAPSHOT</version>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <javafx.version>17.0.2</javafx.version>
  </properties>

  <!-- Repositórios para dependências -->
  <repositories>
    <repository>
      <id>ossrh</id>
      <url>https://s01.oss.sonatype.org/content/repositories/releases/</url>
    </repository>
  </repositories>

  <!-- Repositório para plugins -->
  <pluginRepositories>
    <pluginRepository>
      <id>ossrh-plugin</id>
      <url>https://s01.oss.sonatype.org/content/repositories/releases/</url>
    </pluginRepository>
  </pluginRepositories>

  <dependencies>
    <!-- Retrofit -->
    <dependency>
      <groupId>com.squareup.retrofit2</groupId>
      <artifactId>retrofit</artifactId>
      <version>2.9.0</version>
    </dependency>

    <!-- Converter JSON -->
    <dependency>
      <groupId>com.squareup.retrofit2</groupId>
      <artifactId>converter-gson</artifactId>
      <version>2.9.0</version>
    </dependency>

    <!-- JavaFX -->
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>${javafx.version}</version>
    </dependency>

    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-fxml</artifactId>
      <version>${javafx.version}</version>
    </dependency>

    <!-- Logger HTTP -->
    <dependency>
      <groupId>com.squareup.okhttp3</groupId>
      <artifactId>logging-interceptor</artifactId>
      <version>4.11.0</version>
    </dependency>
  </dependencies>

  <build>
      <plugins>
          <plugin>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-maven-plugin</artifactId>
              <version>0.0.8</version>
              <executions>
                  <execution>
                      <goals>
                          <goal>run</goal>
                      </goals>
                  </execution>
              </executions>
              <configuration>
                  <mainClass>com.midiavox.gestaoramaisdesktop.Main</mainClass>
                  <modulePath>--add-modules javafx.controls,javafx.fxml</modulePath>
              </configuration>
          </plugin>
      </plugins>
  </build>
</project>
